<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_100ssp"
        android:layout_height="@dimen/_100ssp"
        android:src="@drawable/no_internet"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_black"
        android:text="@string/oops"
        android:layout_marginTop="@dimen/_20ssp"
        android:gravity="center"
        android:textSize="@dimen/txt_size"
        android:fontFamily="@font/open_sans_semibold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:layout_marginTop="@dimen/_16ssp"
        android:text="@string/no_internet_connection_found"
        android:gravity="center"
        android:textSize="@dimen/title_size"
        android:fontFamily="@font/open_sans_regular"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/check_your_connection_or_try_again"
        android:gravity="center"
        android:textSize="@dimen/title_size"
        android:fontFamily="@font/open_sans_regular"/>

    <Button
        android:id="@+id/retry_btn2"
        android:layout_width="@dimen/_100ssp"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginTop="@dimen/_40ssp"
        android:background="@drawable/button_pressed"/>
</LinearLayout>