<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/_60ssp"
        android:layout_marginLeft="@dimen/_60ssp"
        android:layout_marginEnd="@dimen/_60ssp"
        android:layout_marginRight="@dimen/_60ssp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_pressed"
        android:fontFamily="@font/baloo_regular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_signin"
        android:padding="@dimen/_50ssp"
        android:src="@drawable/ic_splash" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_sign_up"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/text_color_grey"
        android:textSize="@dimen/label_txt_size" />

    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/baloo_regular"
        android:gravity="center"
        android:paddingTop="@dimen/_8ssp"
        android:paddingBottom="@dimen/_12ssp"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/txt_size" />

</RelativeLayout>